fixed some wrapping issues.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -46,19 +46,20 @@ nav a:hover{
     display: flex;
     flex-wrap: wrap;
     margin: 10%;
-    justify-content: space-around;
+    justify-content: center;
+    align-content: center;
 
 }
 
 .cardDIFF{
-    flex-grow: 3;
+    flex-grow: 1;
     text-align: center;
     border-style: solid;
     border-width: 2px;
     overflow: hidden;
     min-width: 50px;
     min-height: 30px;
-    max-width: 100%;
+    max-width: 1200px;
     max-height: 600px;
 
 }
@@ -77,7 +78,7 @@ nav a:hover{
     border-width: 2px;
     overflow: hidden;
     min-width: 50px;
-    max-width: 50%;
+    max-width: 600px;
     max-height: 450px;
     padding: 5px;
 
